--- a/FrontEnd/Pages/Index.cshtml
+++ b/FrontEnd/Pages/Index.cshtml
@@ -37,6 +37,12 @@
                                             <a asp-page="Speaker" asp-route-id="@speaker.Id">@speaker.Name</a>
                                         </li>
                                     }
+                                    @if (Model.IsAdmin)
+                                    {
+                                        <li>
+                                            <a asp-page="/Admin/EditSession" asp-route-id="@session.Id" class="btn btn-default btn-xs">Edit</a>
+                                        </li>
+                                    }
                                 </ul>
                             </div>
                         </div>
