--- a/FrontEnd/Pages/Admin/EditSession.cshtml
+++ b/FrontEnd/Pages/Admin/EditSession.cshtml
@@ -5,7 +5,13 @@
 }
 
 <h3>Edit Session</h3>
-
+@if (Model.ShowMessage)
+{
+    <div class="alert alert-success alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span>   </button>
+        @Model.Message
+    </div>
+}
 <form method="post" class="form-horizontal">
     <div asp-validation-summary="All" class="text-danger"></div>
     <input asp-for="Session.Id" type="hidden" />
