--- a/FrontEnd/Pages/Index.cshtml
+++ b/FrontEnd/Pages/Index.cshtml
@@ -4,50 +4,51 @@
     var title = $"My Conference {DateTime.Now.Year}";
     ViewData["Title"] = title;
 }
+@if (Model.ShowMessage)
+{
+    <div class="alert alert-success alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span>   </button>
+        @Model.Message
+    </div>
+}
+<div class="agenda">
+    <h1>My Conference @System.DateTime.Now.Year</h1>
 
-    <div class="agenda">
-        <h1>My Conference @System.DateTime.Now.Year</h1>
-
-        <ul class="nav nav-pills mb-3">
-            @foreach (var day in Model.DayOffsets)
-            {
-                <li role="presentation" class="nav-item">
-                    <a class="nav-link @(Model.CurrentDayOffset == day.Offset ? "active" : null)" asp-route-day="@day.Offset">@day.DayofWeek?.ToString()</a>
-                </li>
-            }
-        </ul>
-
-        @foreach (var timeSlot in Model.Sessions)
+    <ul class="nav nav-pills mb-3">
+        @foreach (var day in Model.DayOffsets)
         {
-            <h4>@timeSlot.Key?.ToString("HH:mm")</h4>
-            <div class="row">
-                @foreach (var session in timeSlot)
-                {
-                    <div class="col-md-3 mb-4">
-                        <div class="card shadow session h-100">
-                            <div class="card-header">@session.Track?.Name</div>
-                            <div class="card-body">
-                                <h5 class="card-title"><a asp-page="Session" asp-route-id="@session.Id">@session.Title</a></h5>
-                            </div>
-                            <div class="card-footer">
-                                <ul class="list-inline mb-0">
-                                    @foreach (var speaker in session.Speakers)
-                                    {
-                                        <li class="list-inline-item">
-                                            <a asp-page="Speaker" asp-route-id="@speaker.Id">@speaker.Name</a>
-                                        </li>
-                                    }
-                                    @if (Model.IsAdmin)
-                                    {
-                                        <li>
-                                            <a asp-page="/Admin/EditSession" asp-route-id="@session.Id" class="btn btn-default btn-xs">Edit</a>
-                                        </li>
-                                    }
-                                </ul>
-                            </div>
+            <li role="presentation" class="nav-item">
+                <a class="nav-link @(Model.CurrentDayOffset == day.Offset ? "active" : null)" asp-route-day="@day.Offset">@day.DayofWeek?.ToString()</a>
+            </li>
+        }
+    </ul>
+
+    @foreach (var timeSlot in Model.Sessions)
+    {
+        <h4>@timeSlot.Key?.ToString("HH:mm")</h4>
+        <div class="row">
+            @foreach (var session in timeSlot)
+            {
+                <div class="col-md-3 mb-4">
+                    <div class="card shadow session h-100">
+                        <div class="card-header">@session.Track?.Name</div>
+                        <div class="card-body">
+                            <h5 class="card-title"><a asp-page="Session" asp-route-id="@session.Id">@session.Title</a></h5>
+                        </div>
+                        <div class="card-footer">
+                            <ul class="list-inline mb-0">
+                                @foreach (var speaker in session.Speakers)
+                                {
+                                    <li class="list-inline-item">
+                                        <a asp-page="Speaker" asp-route-id="@speaker.Id">@speaker.Name</a>
+                                    </li>
+                                }
+                                <a authz-policy="Admin" asp-page="/Admin/EditSession" asp-route-id="@session.Id" class="btn btn-default btn-xs">Edit</a>
+                            </ul>
                         </div>
                     </div>
-                }
-            </div>
-        }
-    </div>
+                </div>
+            }
+        </div>
+    }
+</div>
