--- a/FrontEnd/Pages/Shared/_Layout.cshtml
+++ b/FrontEnd/Pages/Shared/_Layout.cshtml
@@ -21,13 +21,19 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-dark" asp-page="/Search">Search</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Agenda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-page="/Speakers">Speakers</a>
+                        </li>
+                        <li class="nav-item" authz="true">
+                            <a class="nav-link text-dark" asp-page="/MyAgenda">My Agenda</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-page="/Search">Search</a>
                         </li>
                     </ul>
                 </div>
